<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="190dp"
        android:layout_height="218dp"
        app:srcCompat="@mipmap/pinto"
        tools:layout_editor_absoluteX="-5dp"
        tools:layout_editor_absoluteY="326dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="206dp"
        android:layout_height="259dp"
        app:srcCompat="@mipmap/igre"
        tools:layout_editor_absoluteX="-22dp"
        tools:layout_editor_absoluteY="51dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvRecipeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/gallo_pinto"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvIngredients"
        android:layout_width="183dp"
        android:layout_height="123dp"
        android:text="@string/ingredientes_n_arroz_n_frijoles_n_cebolla"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="118dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvPreparationSteps"
        android:layout_width="186dp"
        android:layout_height="106dp"
        android:text="@string/pasos_para_la_preparaci_n_n1_sofre_r_los_ingredientes_n2_agregar_los_frijoles_n3_a_adir_el_arroz"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="412dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnAddNewRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_adir_nueva_receta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPreparationSteps"
        app:layout_constraintVertical_bias="0.353" />

    <Button
        android:id="@+id/button2"
        android:layout_width="98dp"
        android:layout_height="67dp"
        android:text="ATRAS"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="640dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
